Make single measurements trigger a download in browser when ?download=true
This implements: https://github.com/ooni/api/issues/68
